@@ -1,0 +1,6 @@
+#include <qpdf/QPDFUsage.hh>
+
+QPDFUsage::QPDFUsage(std::string const& msg) :
+    std::runtime_error(msg)
+{
+}
